--- a/src/app.css
+++ b/src/app.css
@@ -1,23 +1,23 @@
-@import "../static/styles/docs.css";
-@import "../node_modules/flowbite/dist/flowbite.css";
+@import '../static/styles/docs.css';
+@import '../node_modules/flowbite/dist/flowbite.css';
 
 /* Write your global styles here, in PostCSS syntax */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
 @layer base {
 	html {
 		-webkit-text-size-adjust: 100%;
-		font-family: Inter, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+		font-family: Inter, ui-sans-serif, system-ui, -apple-system, Segoe UI,
+			Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji,
+			Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
 		line-height: 1.5;
 		-moz-tab-size: 4;
 		tab-size: 4;
 	}
 
-  
-  .related-components,
+	.related-components,
 	.references {
 		@apply w-full flex flex-wrap;
 	}
@@ -28,7 +28,6 @@
 	}
 
 	#mainContent > pre {
-		@apply text-sm rounded-xl overflow-auto w-full my-4 mx-auto bg-gradient-to-r text-gray-600 dark:text-gray-400 bg-gray-50 dark:bg-gray-900 border border-gray-200 dark:border-gray-700 p-2 sm:p-6;
+		@apply text-sm rounded-xl overflow-auto w-full my-4 mx-auto bg-gradient-to-r text-gray-600 dark:text-gray-400 bg-gray-50 dark:bg-gray-800 border border-gray-200 dark:border-gray-700 p-2 sm:p-6;
 	}
 }
-
